--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "Santiago Arriaga Noguez",
   "license": "GPL-3.0",
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
