--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "redux-freeze": "^0.1.5",
+    "resolve-url-loader": "^2.1.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.6.2",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
     "whatwg-fetch": "^2.0.1"
